details working fine

--- a/src/app/drafts/matchup-overview/widgets/teambuilder/pokemon-builder/pokemon-builder.component.scss
+++ b/src/app/drafts/matchup-overview/widgets/teambuilder/pokemon-builder/pokemon-builder.component.scss
@@ -88,12 +88,14 @@ input {
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
+  flex: 1;
   justify-content: space-around;
 
   .section {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    height: min-content;
     align-items: center;
     justify-content: space-around;
   }
