--- a/src/app/drafts/matchup-overview/widgets/teambuilder/teambuilder.component.scss
+++ b/src/app/drafts/matchup-overview/widgets/teambuilder/teambuilder.component.scss
@@ -156,3 +156,11 @@
     justify-content: center;
   }
 }
+
+.export-area {
+  background-color: pdz-color(menu-container-low);
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  height: 100%;
+  width: 100%;
+}
