update news to use markdown

--- a/src/app/drafts/matchup-overview/matchup-overview.component.html
+++ b/src/app/drafts/matchup-overview/matchup-overview.component.html
@@ -221,7 +221,7 @@
   [class.is-hidden]="teambuilderPanelOpen"
   (click)="teambuilderPanelOpen = !teambuilderPanelOpen"
 >
-  <pdz-icon name="build" />
+  <pdz-icon name="build" size="lg" />
 </button>
 
 <!-- <div class="matchup-tabs-container">
