--- a/src/app/league-zone/league-drafting/league-drafting.component.scss
+++ b/src/app/league-zone/league-drafting/league-drafting.component.scss
@@ -1,3 +1,6 @@
+@use "../../../styles/global.scss" as *;
+@use "../../../styles/mixins" as *;
+
 .main-league-container {
   display: flex;
   width: fit-content;
@@ -22,8 +25,7 @@
 
     .draft-rounds {
       padding: var(--pdz-space-xs);
-      overflow-x: scroll;
-      overflow-y: scroll;
+      overflow: auto;
       max-height: 10rem;
       scroll-snap-type: y mandatory;
 
@@ -31,8 +33,11 @@
       row-gap: 0.5rem;
       align-items: stretch;
       flex-direction: column;
+      width: 100%;
+      scrollbar-width: thin;
       .draft-round-container {
         scroll-snap-align: start;
+        width: fit-content;
         display: flex;
         flex-direction: column;
         .round-label {
